# scoop

./: .env  .gitignore  Cargo.toml  Dockerfile  README.md  configuration.yaml  fly.toml  sqlx-data.json
configuration/: base.yaml  local.yaml  production.yaml
migrations/: 20231211172228_make_status_not_null_in_subscriptions.sql  20231211172600_add_subscription_token_to_subscriptions.sql  20240108135329_seed_user.sql  20240112073345_create_idempotency_table.sql  20240112143721_relax_null_checks_on_idempotency.sql  20240115180532_creat_newsletter_issues_table.sql  20240115181126_create_issue_delivery_queue_table.sql
scripts/: init_db.sh  init_redis.sh
src/: authentication.rs  configuration.rs  configuration.yaml  domain.rs  email_client.rs  issue_delivery_workers.rs  lib.rs  main.rs  session_state.rs  startup.rs  telemetry.rs  utils.rs
src/authentication/: middlewear.rs  mod.rs  password.rs
src/domain/: new_subscriber.rs  subscriber_email.rs  subscriber_name.rs
src/idempotency/: key.rs  mod.rs  persistence.rs
src/routes/: mod.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs  unsubscribe.rs
src/routes/admin/: dashboard.html  dashboard.rs  mod.rs
src/routes/admin/newsletter/: get.rs  mod.rs  newsletter.html  post.rs
src/routes/admin/password/: get.rs  logout.rs  mod.rs  password.html  post.rs
src/routes/home/: home.html  mod.rs
src/routes/login/: get.rs  login.html  post.rs
src/routes/subscriptions/: get.rs  mod.rs  post.rs  subscribe.html
static/: custom.css
tests/: health_check.rs
tests/api/: admin_dashboard.rs  change_password.rs  health_check.rs  helpers.rs  login.rs  main.rs  newsletter.rs  subsciptions_confirm.rs  subscriptions.rs  unsubscribe.rs
