[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4.3.1"
serde = { version = "1.0.164", features = ["derive"] }
tokio = { version = "1.28.2", features = ["rt-multi-thread", "macros"] }  
config = "0.13.3"
chrono = {version = "0.4.26", default_features = false, features = ["clock"]}
uuid = {version = "1.3.4", features = ["v4"]}
tracing = {version = "0.1", features = ["log"]}
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"
tracing-log = "0.1"
tracing-actix-web = "0.7" 
unicode-segmentation = "1.10.1"

[dependencies.sqlx]
version = "0.6"
default-features = false
features = [
  "runtime-tokio-rustls",
  "macros",
  "postgres",
  "uuid",
  "chrono",
  "migrate",
  "offline"
]

[dev-dependencies]
reqwest = "0.11.18"
once_cell = "1"
