[package]
name = "scoop"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "scoop"

[dependencies]
actix-web = "4.3.1"
serde = { version = "1.0.164", features = ["derive"] }
tokio = { version = "1.28.2", features = ["rt-multi-thread", "macros"] }  
config = "0.13.3"
chrono = {version = "0.4.26", default_features = false, features = ["clock"]}
uuid = {version = "1.3.4", features = ["v4", "serde"]}
tracing = {version = "0.1", features = ["log"]}
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"
tracing-log = "0.1"
tracing-actix-web = "0.7" 
unicode-segmentation = "1.10.1"
claims = "0.7.1"
validator = "0.16.1"
fake = "2.9.1"
serde_json = "1.0.108"
serde-aux = "4.3.1"
rand = { version = "0.8", features=["std_rng"] }
thiserror = "1.0.51"
anyhow = "1.0.76"
secrecy = {version = "0.8.0", features=["serde"] }
base64 = "0.21.5"
argon2 = {version = "0.5.2", features=["std"]}
actix-web-flash-messages = { version = "0.4.2", features = ["cookies"] }
actix-session = { version = "0.8.0", features = ["redis-rs-tls-session"] }
actix-web-lab = "0.20.1"

[dependencies.reqwest]
version = "0.11.18"
default_features = false
features = ["json", "rustls-tls", "cookies"]

[dependencies.sqlx]
version = "0.6"
default-features = false
features = [
  "runtime-tokio-rustls",
  "macros",
  "postgres",
  "uuid",
  "chrono",
  "migrate",
  "offline"
]

[dev-dependencies]
once_cell = "1"
tokio = { version = "1", features = ["rt", "macros"] }
wiremock = "0.5"
linkify = "0.9"
serde_urlencoded = "0.7.1"